# PixelGameEngine

./: Cargo.toml
examples/: animated_ball.rs  basic_window.rs  pong.rs
src/: arithmetric.rs  buffer.rs  color.rs  draw.rs  engine.rs  lib.rs  pixel.rs
src/events/: key_event.rs  mod.rs  mouse_event.rs
src/primitives/: circle.rs  line.rs  mod.rs  rectangle.rs
src/text/: mod.rs
