[package]
name = "pixel-game-engine"
version = "0.1.0"
authors = ["Lando <lando.schumpich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.24.0"
log = "0.4.13"
winit_input_helper = "0.9.0"
env_logger = "0.8.2"
bresenham = "0.1.1"
rusttype = "0.9.2"
lazy_static = "1.4.0"
